[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.39.3", features = ["full", "tokio-macros"] }
tokio-macros = "2.4.0"
